# swh-scanner

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  MANIFEST.in  Makefile.local  README.md  README.rst  benchmark.py  mypy.ini  pyproject.toml  pytest.ini  requirements-swh.txt  requirements-test.txt  requirements.txt  run_backend.sh  run_benchmark.sh  setup.py  tox.ini  version.txt
debian/: control  copyright  rules
docs/: README.rst  cli.rst  index.rst
legacy-policy/: policy.py
swh/foo/: bar.py  cli.py
swh/scanner/: backend.py  benchmark_algos.py  cli.py  client.py  config.py  dashboard.py  data.py  db.py  exceptions.py  logger.py  model.py  output.py  plot.py  policy.py  scanner.py  setup_wizard.py
swh/scanner/dashboard/: dashboard.py
swh/scanner/dashboard/static/css/: dashboard.css
swh/scanner/dashboard/templates/: base.html  dashboard.html  results.html
swh/scanner/dashboard/templates/partials/: provenance.html  tree.html
swh/scanner/resources/: README.rst
swh/scanner/resources/gitignore/Global/: macOS.gitignore
swh/scanner/tests/: conftest.py  data.py  flask_api.py  test_backend.py  test_cli.py  test_client.py  test_dashboard.py  test_data.py  test_db.py  test_model.py  test_plot.py  test_policy.py  test_scanner.py
swh/scanner/tests/data/: global.yml  global2.yml  sample-folder-policy.tgz  sample-folder-result-no-toexclude.json  sample-folder-result.json  sample-folder.tgz
swh/scanner/tests/data/sample-folder/: link-to-another-quote
swh/scanner/tests/data/sample-folder/bar/barfoo/: another-quote.org
swh/scanner/tests/data/sample-folder/foo/: barfoo  quotes.md  rel-link-to-barfoo
